--- a/LogicielNettoyagePC/LogicielNettoyagePC.csproj
+++ b/LogicielNettoyagePC/LogicielNettoyagePC.csproj
@@ -6,4 +6,14 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="clean.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="clean.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
 </Project>
